--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
     "jsonwebtoken": "^8.5.0",
-    "pg": "^7.8.1"
+    "pg": "^7.8.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
